# Uno

./: .gitignore  2x2_PIVOT_BLOCKS_EXPLANATION.md  CMakeLists.txt  CPP_API_GUIDE.md  EIGEN_FAILURE_ROOT_CAUSE_ANALYSIS.md  HSL_SOLVERS_COMPARISON.md  INERTIA_EXPLANATION.md  LINEAR_SOLVERS_INTEGRATION_SUMMARY.md  UNO_ARCHITECTURE.md  UNO_BUILD_GUIDE.md  UNO_COMPLETE_GUIDE.md
examples/: 3pk.mod
examples/thermodynamic_optimization/: CMakeLists.txt  CPP_INTERFACE_GUIDE.md  CPP_TUTORIAL.md  README.md  flash_calculation.mod  minimal_test.cpp  simple_tutorial.cpp  simplified_flash.mod  thermo_functions.c  tutorial_example.cpp
plantuml/: README.md  uno_activity_diagram.puml  uno_class_diagram.puml  uno_component_diagram.puml  uno_sequence_diagram.puml  uno_state_diagram.puml  uno_usecase_diagram.puml
uno/ingredients/subproblem_solvers/: SymmetricIndefiniteLinearSolverFactory.cpp
uno/ingredients/subproblem_solvers/EIGEN/: EigenLinearSolver.cpp  EigenLinearSolver.hpp
uno/ingredients/subproblem_solvers/MUMPS/: MUMPSSolver.cpp
